--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 
   <body>
     <!-- write the body here -->
+	  <input id = "age" type="number"/>
+	  <input id = "name" type ="name"/>
+	  <button id="btn" type="submit">Submit</button>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
