--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <!-- write the body here -->
 	  <form>
 	  <input id = "age" type="number"/>
-	  <input id = "name" type ="name"/>
+	  <input id = "name" type ="text"/>
 	  <button id="btn" type="submit">Submit</button>
 		</form>
     <script type="text/javascript" src="./script.js"></script>
